--- a/MihomoParty.yaml
+++ b/MihomoParty.yaml
@@ -27,6 +27,8 @@ proxy-groups:
       - 🇺🇸 美国节点
       - 🇸🇬 狮城节点
       - 🇭🇰 香港节点
+      - 🇵🇱 波兰节点
+      - 🇩🇪 德国节点      
   - name: ✉️  Telegram
     type: select
     proxies:
@@ -36,6 +38,8 @@ proxy-groups:
       - 🇯🇵 日本节点
       - 🇺🇸 美国节点
       - 🇭🇰 香港节点
+      - 🇵🇱 波兰节点
+      - 🇩🇪 德国节点      
       - DIRECT
   - name: 🤖 OpenAI
     type: select
@@ -46,6 +50,8 @@ proxy-groups:
       - 🇯🇵 日本节点
       - 🇸🇬 狮城节点
       - 🇭🇰 香港节点
+      - 🇵🇱 波兰节点
+      - 🇩🇪 德国节点      
       - DIRECT
   - name: 🎵 Spotify
     type: select
@@ -56,6 +62,8 @@ proxy-groups:
       - 🇯🇵 日本节点
       - 🇺🇸 美国节点
       - 🇭🇰 香港节点
+      - 🇵🇱 波兰节点
+      - 🇩🇪 德国节点      
       - DIRECT
   - name: 📺 Bahamut
     type: select
@@ -66,6 +74,8 @@ proxy-groups:
       - 🇯🇵 日本节点
       - 🇺🇸 美国节点
       - 🇸🇬 狮城节点
+      - 🇵🇱 波兰节点
+      - 🇩🇪 德国节点      
       - DIRECT
   - name: Ⓜ️ 微软服务
     type: select
@@ -76,6 +86,8 @@ proxy-groups:
       - 🇺🇸 美国节点
       - 🇸🇬 狮城节点
       - 🇭🇰 香港节点
+      - 🇵🇱 波兰节点
+      - 🇩🇪 德国节点      
       - DIRECT
   - name: 🎮 游戏平台
     type: select
@@ -87,6 +99,8 @@ proxy-groups:
       - 🇺🇸 美国节点
       - 🇸🇬 狮城节点
       - 🇭🇰 香港节点
+      - 🇵🇱 波兰节点
+      - 🇩🇪 德国节点      
   - name: 🌏 全球加速
     type: select
     proxies:
@@ -96,6 +110,8 @@ proxy-groups:
       - 🇺🇸 美国节点
       - 🇸🇬 狮城节点
       - 🇭🇰 香港节点
+      - 🇵🇱 波兰节点
+      - 🇩🇪 德国节点
       - DIRECT
   - name: 🐟 兜底分流
     type: select
@@ -106,28 +122,42 @@ proxy-groups:
       - 🇺🇸 美国节点
       - 🇸🇬 狮城节点
       - 🇭🇰 香港节点
+      - 🇵🇱 波兰节点
+      - 🇩🇪 德国节点
       - DIRECT
   - name: 🇯🇵 日本节点
     include-all: true
-    filter: (?i)日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan
+    filter: (?i)🇯🇵|JP|jp|日本|日|Japan
     type: url-test
     interval: 600
     tolerance: 50
   - name: 🇺🇲 美国节点
     include-all: true
-    filter: (?i)美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States
+    filter: 🇺🇸|US|us|美国|美|America
     type: url-test
     interval: 600
     tolerance: 50
   - name: 🇸🇬 狮城节点
     include-all: true
-    filter: (?i)新加坡|坡|狮城|SG|Singapore
+    filter: (?i)🇸🇬|SG|sg|新加坡|狮|Singapore
     type: url-test
     interval: 600
     tolerance: 50
   - name: 🇭🇰 香港节点
     include-all: true
-    filter: (?i)港|HK|hk|Hong Kong|HongKong|hongkong
+    filter: (?i)🇭🇰|HK|hk|香港|港|HongKong
+    type: url-test
+    interval: 600
+    tolerance: 50
+  - name: 🇵🇱 波兰节点
+    include-all: true
+    filter: (?i)🇵🇱|PL|PL|波兰|Poland
+    type: url-test
+    interval: 600
+    tolerance: 50
+  - name: 🇩🇪 德国节点
+    include-all: true
+    filter: (?i)🇩🇪|DE|de|德国|德|Germany
     type: url-test
     interval: 600
     tolerance: 50
