--- a/MihomoParty.yaml
+++ b/MihomoParty.yaml
@@ -15,6 +15,7 @@ proxy-groups:
   - name: ♻️ 自动选择
     type: url-test
     include-all: true
+    filter: "^(?!.*(剩余|到期)).*$"
     interval: 600
     tolerance: 50
   - name: 🍎 苹果服务
@@ -126,39 +127,40 @@ proxy-groups:
       - 🇩🇪 德国节点
       - DIRECT
   - name: 🇯🇵 日本节点
+    type: url-test
     include-all: true
     filter: (?i)🇯🇵|JP|jp|日本|日|Japan
-    type: url-test
     interval: 600
     tolerance: 50
   - name: 🇺🇸 美国节点
+    type: url-test 
     include-all: true
     filter: 🇺🇸|US|us|美国|美|America
-    type: url-test
     interval: 600
     tolerance: 50
   - name: 🇸🇬 狮城节点
+    type: url-test
     include-all: true
     filter: (?i)🇸🇬|SG|sg|新加坡|狮|Singapore
     type: url-test
     interval: 600
     tolerance: 50
   - name: 🇭🇰 香港节点
+    type: url-test
     include-all: true
     filter: (?i)🇭🇰|HK|hk|香港|港|HongKong
-    type: url-test
     interval: 600
     tolerance: 50
   - name: 🇵🇱 波兰节点
+    type: url-test
     include-all: true
     filter: (?i)🇵🇱|PL|PL|波兰|Poland
-    type: url-test
     interval: 600
     tolerance: 50
   - name: 🇩🇪 德国节点
+    type: url-test
     include-all: true
     filter: (?i)🇩🇪|DE|de|德国|德|Germany
-    type: url-test
     interval: 600
     tolerance: 50
 
