--- a/MihomoParty.yaml
+++ b/MihomoParty.yaml
@@ -208,6 +208,13 @@ rule-providers:
     interval: 86400
     format: yaml
     type: http
+  GitHub:
+    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
+    path: ./ruleset/GitHub.yaml
+    behavior: classical
+    interval: 86400
+    format: yaml
+    type: http
   Game:
     url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Game.yaml
     path: ./ruleset/Game.yaml
@@ -265,6 +272,7 @@ rules:
   - RULE-SET,Spotify,🎵 Spotify
   - RULE-SET,Bahamut,📺 Bahamut
   - RULE-SET,Microsoft,Ⓜ️ 微软服务
+  - RULE-SET,Github,🌏 全球加速
   - RULE-SET,Game,🎮 游戏平台
   - RULE-SET,ProxyLite,🌏 全球加速
   - RULE-SET,Direct,DIRECT
