--- a/MihomoParty.yaml
+++ b/MihomoParty.yaml
@@ -272,7 +272,7 @@ rules:
   - RULE-SET,Spotify,🎵 Spotify
   - RULE-SET,Bahamut,📺 Bahamut
   - RULE-SET,Microsoft,Ⓜ️ 微软服务
-  - RULE-SET,Github,🌏 全球加速
+  - RULE-SET,GitHub,🌏 全球加速
   - RULE-SET,Game,🎮 游戏平台
   - RULE-SET,ProxyLite,🌏 全球加速
   - RULE-SET,Direct,DIRECT
