--- a/MihomoParty.yaml
+++ b/MihomoParty.yaml
@@ -4,12 +4,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🚀 手动切换
-      - 🇯🇵 日本节点
-      - 🇺🇸 美国节点
-      - 🇸🇬 狮城节点
       - 🇭🇰 香港节点
+      - 🇹🇼 台湾节点
+      - 🇯🇵 日本节点
+      - 🇸🇬 狮城节点
+      - 🇺🇸 美国节点
       - 🇵🇱 波兰节点
-      - 🇩🇪 德国节点        
+      - 🇩🇪 德国节点
       - DIRECT
   - name: 🚀 手动切换
     type: select
@@ -26,23 +27,25 @@ proxy-groups:
       - DIRECT
       - 🚀 节点选择
       - 🚀 手动切换
-      - 🇯🇵 日本节点
-      - 🇺🇸 美国节点
-      - 🇸🇬 狮城节点
       - 🇭🇰 香港节点
+      - 🇹🇼 台湾节点
+      - 🇯🇵 日本节点
+      - 🇸🇬 狮城节点
+      - 🇺🇸 美国节点
       - 🇵🇱 波兰节点
-      - 🇩🇪 德国节点      
+      - 🇩🇪 德国节点   
   - name: ✉️ Telegram
     type: select
     proxies:
       - 🇸🇬 狮城节点
       - 🚀 节点选择
       - 🚀 手动切换
+      - 🇭🇰 香港节点
+      - 🇹🇼 台湾节点
       - 🇯🇵 日本节点
       - 🇺🇸 美国节点
-      - 🇭🇰 香港节点
       - 🇵🇱 波兰节点
-      - 🇩🇪 德国节点      
+      - 🇩🇪 德国节点 
       - DIRECT
   - name: 🤖 OpenAI
     type: select
@@ -50,11 +53,13 @@ proxy-groups:
       - 🇺🇸 美国节点
       - 🚀 节点选择
       - 🚀 手动切换
+      - 🇭🇰 香港节点
+      - 🇹🇼 台湾节点
       - 🇯🇵 日本节点
       - 🇸🇬 狮城节点
-      - 🇭🇰 香港节点
+      - 🇺🇸 美国节点
       - 🇵🇱 波兰节点
-      - 🇩🇪 德国节点      
+      - 🇩🇪 德国节点
       - DIRECT
   - name: 🎵 Spotify
     type: select
@@ -62,11 +67,12 @@ proxy-groups:
       - 🇸🇬 狮城节点
       - 🚀 节点选择
       - 🚀 手动切换
+      - 🇭🇰 香港节点
+      - 🇹🇼 台湾节点
       - 🇯🇵 日本节点
       - 🇺🇸 美国节点
-      - 🇭🇰 香港节点
       - 🇵🇱 波兰节点
-      - 🇩🇪 德国节点      
+      - 🇩🇪 德国节点
       - DIRECT
   - name: 📺 Bahamut
     type: select
@@ -74,23 +80,25 @@ proxy-groups:
       - 🇭🇰 香港节点
       - 🚀 节点选择
       - 🚀 手动切换
+      - 🇹🇼 台湾节点
       - 🇯🇵 日本节点
-      - 🇺🇸 美国节点
       - 🇸🇬 狮城节点
+      - 🇺🇸 美国节点
       - 🇵🇱 波兰节点
-      - 🇩🇪 德国节点      
+      - 🇩🇪 德国节点    
       - DIRECT
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🚀 手动切换
-      - 🇯🇵 日本节点
-      - 🇺🇸 美国节点
-      - 🇸🇬 狮城节点
       - 🇭🇰 香港节点
+      - 🇹🇼 台湾节点
+      - 🇯🇵 日本节点
+      - 🇸🇬 狮城节点
+      - 🇺🇸 美国节点
       - 🇵🇱 波兰节点
-      - 🇩🇪 德国节点      
+      - 🇩🇪 德国节点    
       - DIRECT
   - name: 🎮 游戏平台
     type: select
@@ -98,21 +106,23 @@ proxy-groups:
       - DIRECT
       - 🚀 节点选择
       - 🚀 手动切换
-      - 🇯🇵 日本节点
-      - 🇺🇸 美国节点
-      - 🇸🇬 狮城节点
       - 🇭🇰 香港节点
+      - 🇹🇼 台湾节点
+      - 🇯🇵 日本节点
+      - 🇸🇬 狮城节点
+      - 🇺🇸 美国节点
       - 🇵🇱 波兰节点
-      - 🇩🇪 德国节点      
+      - 🇩🇪 德国节点
   - name: 🌏 全球加速
     type: select
     proxies:
       - 🚀 节点选择
       - 🚀 手动切换
-      - 🇯🇵 日本节点
-      - 🇺🇸 美国节点
-      - 🇸🇬 狮城节点
       - 🇭🇰 香港节点
+      - 🇹🇼 台湾节点
+      - 🇯🇵 日本节点
+      - 🇸🇬 狮城节点
+      - 🇺🇸 美国节点
       - 🇵🇱 波兰节点
       - 🇩🇪 德国节点
       - DIRECT
@@ -121,10 +131,11 @@ proxy-groups:
     proxies:
       - 🚀 节点选择
       - 🚀 手动切换
-      - 🇯🇵 日本节点
-      - 🇺🇸 美国节点
-      - 🇸🇬 狮城节点
       - 🇭🇰 香港节点
+      - 🇹🇼 台湾节点
+      - 🇯🇵 日本节点
+      - 🇸🇬 狮城节点
+      - 🇺🇸 美国节点
       - 🇵🇱 波兰节点
       - 🇩🇪 德国节点
       - DIRECT
@@ -149,7 +160,13 @@ proxy-groups:
   - name: 🇭🇰 香港节点
     type: url-test
     include-all: true
-    filter: (?i)🇭🇰|HK|hk|香港|港|HongKong
+    filter: (?i)🇭🇰|HK|hk|香港|港|Hong Kong
+    interval: 600
+    tolerance: 50
+  - name: 🇹🇼 台湾节点
+    type: url-test
+    include-all: true
+    filter: (?i)🇹🇼|TW|tw|台湾|台|Taiwan
     interval: 600
     tolerance: 50
   - name: 🇵🇱 波兰节点
