--- a/MihomoParty.yaml
+++ b/MihomoParty.yaml
@@ -330,6 +330,7 @@ rules:
   - RULE-SET,Spotify,Spotify
   - RULE-SET,Bahamut,Bahamut
   - DOMAIN-SUFFIX,acgrip.com,Bahamut
+  - DOMAIN-SUFFIX,popgo.org,Bahamut
   - RULE-SET,Microsoft,微软服务
   - RULE-SET,Google,全球加速
   - RULE-SET,GitHub,全球加速
