--- a/MihomoParty.yaml
+++ b/MihomoParty.yaml
@@ -9,7 +9,6 @@ proxy-groups:
       - 日本节点
       - 狮城节点
       - 美国节点
-      - 波兰节点
       - 德国节点
       - DIRECT
     icon: https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/vmssrNotice.png
@@ -35,7 +34,6 @@ proxy-groups:
       - 日本节点
       - 狮城节点
       - 美国节点
-      - 波兰节点
       - 德国节点
     icon: https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/apple(1).png
   - name: Bahamut
@@ -48,21 +46,19 @@ proxy-groups:
       - 日本节点
       - 狮城节点
       - 美国节点
-      - 波兰节点
       - 德国节点
       - DIRECT
     icon: https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/bahamute.png
   - name: Spotify
     type: select
     proxies:
-      - 狮城节点
+      - 台湾节点
       - 节点选择
       - 手动切换
       - 香港节点
-      - 台湾节点
       - 日本节点
+      - 狮城节点
       - 美国节点
-      - 波兰节点
       - 德国节点
       - DIRECT
     icon: https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/spotify(green).png
@@ -76,10 +72,22 @@ proxy-groups:
       - 台湾节点
       - 日本节点
       - 美国节点
-      - 波兰节点
       - 德国节点
       - DIRECT
     icon: https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/telegram(1).png
+  - name: Youtube
+    type: select
+    proxies:
+      - 美国节点
+      - 节点选择
+      - 手动切换
+      - 香港节点
+      - 台湾节点
+      - 日本节点
+      - 狮城节点
+      - 德国节点
+      - DIRECT
+    icon: https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/youtube.png
   - name: OpenAI
     type: select
     proxies:
@@ -90,7 +98,6 @@ proxy-groups:
       - 台湾节点
       - 日本节点
       - 狮城节点
-      - 波兰节点
       - 德国节点
       - DIRECT
     icon: https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/ChatGPT-green.png
@@ -104,7 +111,6 @@ proxy-groups:
       - 日本节点
       - 狮城节点
       - 美国节点
-      - 波兰节点
       - 德国节点    
       - DIRECT
     icon: https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/microsoft.png
@@ -119,7 +125,6 @@ proxy-groups:
       - 日本节点
       - 狮城节点
       - 美国节点
-      - 波兰节点
       - 德国节点
     icon: https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/game.png
   - name: 全球加速
@@ -132,7 +137,6 @@ proxy-groups:
       - 日本节点
       - 狮城节点
       - 美国节点
-      - 波兰节点
       - 德国节点
       - DIRECT
     icon: https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/quanqiu(1).png
@@ -146,7 +150,6 @@ proxy-groups:
       - 日本节点
       - 狮城节点
       - 美国节点
-      - 波兰节点
       - 德国节点
       - DIRECT
     icon: https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/dog.png
@@ -185,13 +188,6 @@ proxy-groups:
     interval: 600
     tolerance: 50
     icon: https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/taiwan(3).png
-  - name: 波兰节点
-    type: url-test
-    include-all: true
-    filter: (?i)🇵🇱|PL|PL|波兰|Poland
-    interval: 600
-    tolerance: 50
-    icon: https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/Poland.png
   - name: 德国节点
     type: url-test
     include-all: true
@@ -225,6 +221,13 @@ rule-providers:
   Telegram:
     url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml
     path: ./ruleset/Telegram.yaml
+    behavior: classical
+    interval: 86400
+    format: yaml
+    type: http
+  Youtube:
+    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml
+    path: ./ruleset/Youtube.yaml
     behavior: classical
     interval: 86400
     format: yaml
@@ -326,6 +329,7 @@ rules:
   - RULE-SET,Liqiye_GFW,全球加速
   - RULE-SET,Apple,苹果服务
   - RULE-SET,Telegram,Telegram
+  - RULE-SET,YouTube,YouTube
   - RULE-SET,OpenAI,OpenAI
   - RULE-SET,Spotify,Spotify
   - RULE-SET,Bahamut,Bahamut
