--- a/MihomoParty.yaml
+++ b/MihomoParty.yaml
@@ -75,7 +75,7 @@ proxy-groups:
       - 德国节点
       - DIRECT
     icon: https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/telegram(1).png
-  - name: Youtube
+  - name: YouTube
     type: select
     proxies:
       - 美国节点
@@ -225,9 +225,9 @@ rule-providers:
     interval: 86400
     format: yaml
     type: http
-  Youtube:
+  YouTube:
     url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml
-    path: ./ruleset/Youtube.yaml
+    path: ./ruleset/YouTube.yaml
     behavior: classical
     interval: 86400
     format: yaml
