--- a/Clash/Rule/GFW.yaml
+++ b/Clash/Rule/GFW.yaml
@@ -11,3 +11,6 @@ payload:
   - DOMAIN-SUFFIX,steampowered.com
   - DOMAIN-SUFFIX,steamcommunity.com
   - DOMAIN-SUFFIX,greasyfork.org
+  - DOMAIN-SUFFIX,acgrip.com
+  - DOMAIN-SUFFIX,popgo.org
+  - DOMAIN-SUFFIX,acgnx.se
