--- a/Clash/Config/Override.yaml
+++ b/Clash/Config/Override.yaml
@@ -66,7 +66,7 @@ proxy-groups:
       - 德国节点
       - DIRECT
       - REJECT
-    icon: https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/chatgpt(balck).png
+    icon: https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/chatgpt(white).png
   - name: 游戏平台
     type: select
     proxies:
