--- a/Clash/Config/Override.yaml
+++ b/Clash/Config/Override.yaml
@@ -244,14 +244,14 @@ rule-providers:
     format: yaml
     type: http
   Bahamut:
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.yaml
+    url: https://rule.kelee.one/Clash/Bahamut.yaml
     path: ./ruleset/Bahamut.yaml
     behavior: classical
     interval: 3600
     format: yaml
     type: http  
   Spotify:
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.yaml
+    url: https://rule.kelee.one/Clash/Spotify.yaml
     path: ./ruleset/Spotify.yaml
     behavior: classical
     interval: 3600
