--- a/Clash/Config/Override.yaml
+++ b/Clash/Config/Override.yaml
@@ -195,25 +195,25 @@ proxy-groups:
 
 rule-providers:
   Liqiye_Direct:
-    url: https://raw.githubusercontent.com/FaithAluten/Profile/refs/heads/main/Clash/Rule/Direct.yaml
+    url: https://raw.githubusercontent.com/FaithAluten/Profile/refs/heads/main/Clash/Rule/Direct.txt
     path: ./ruleset/Liqiye_Direct.yaml
     behavior: classical
     interval: 3600
-    format: yaml
+    format: text
     type: http
   Liqiye_GFW:
-    url: https://raw.githubusercontent.com/FaithAluten/Profile/refs/heads/main/Clash/Rule/GFW.yaml
+    url: https://raw.githubusercontent.com/FaithAluten/Profile/refs/heads/main/Clash/Rule/GFW.txt
     path: ./ruleset/Liqiye_GFW.yaml
     behavior: classical
     interval: 3600
-    format: yaml
+    format: text
     type: http
   Liqiye_Block:
-    url: https://raw.githubusercontent.com/FaithAluten/Profile/refs/heads/main/Clash/Rule/Block.yaml
+    url: https://raw.githubusercontent.com/FaithAluten/Profile/refs/heads/main/Clash/Rule/Block.txt
     path: ./ruleset/Liqiye_Block.yaml
     behavior: classical
     interval: 3600
-    format: yaml
+    format: text
     type: http
   sogouinput:
     url: https://ruleset.skk.moe/Clash/non_ip/sogouinput.txt
