--- a/Surge/Config/macOS.conf
+++ b/Surge/Config/macOS.conf
@@ -11,7 +11,7 @@ geoip-maxmind-url = https://geodata.kelee.one/Country-Masaiki.mmdb
 
 [Proxy Group]
 ✈️ 节点选择 = select, 🚀 手动选择, 🇭🇰 香港节点, 🇹🇼 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇸 美国节点, 🇩🇪 德国节点
-🚀 手动选择 = select, 🇺🇸America 04, 🪜 七夜云, 🪜 stotik
+🚀 手动选择 = select, 🪜 <名称>
 🍎 苹果服务 = select, DIRECT, ✈️ 节点选择, 🇭🇰 香港节点, 🇹🇼 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇸 美国节点, 🇩🇪 德国节点, REJECT
 🎬 巴哈姆特 = select, 🇭🇰 香港节点, ✈️ 节点选择, 🇹🇼 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇸 美国节点, 🇩🇪 德国节点, DIRECT, REJECT
 🎵 声田音乐 = select, 🇹🇼 台湾节点, ✈️ 节点选择, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇸 美国节点, 🇩🇪 德国节点, DIRECT, REJECT
